@@ -157,8 +157,7 @@ jobs:
         with:
           version: "0.8.4"
       - run: ruff format --check
-      - run:
-          | # Too many files to fit in a single command, also exclude vendored Scintilla and MAPIStubLibrary
+      - run: | # Too many files to fit in a single command, also exclude vendored Scintilla and MAPIStubLibrary
           clang-format --Werror --dry-run $(git ls-files '*.cpp' ':!:com/win32comext/mapi/src/MAPIStubLibrary/')
           if ($LastExitCode -ne 0) { exit $LastExitCode }
           clang-format --Werror --dry-run $(git ls-files '*.h' ':!:Pythonwin/Scintilla/' ':!:com/win32comext/mapi/src/MAPIStubLibrary/')
