@@ -80,6 +80,7 @@ class CPyCOMTest : public IDispatchImpl<IPyCOMTest, &IID_IPyCOMTest, &LIBID_PyCO
     STDMETHOD(SetDoubleSafeArray)(SAFEARRAY *vars, int *retSize);
     STDMETHOD(SetFloatSafeArray)(SAFEARRAY *vars, int *retSize);
     STDMETHOD(GetSafeArrays)(SAFEARRAY **attrs, SAFEARRAY **attrs2, SAFEARRAY **ints);
+    STDMETHOD(GetByteArray)(long sizeBytes, SAFEARRAY **array);
     STDMETHOD(GetSimpleSafeArray)(SAFEARRAY **ints);
     STDMETHOD(ChangeDoubleSafeArray)(SAFEARRAY **vals);
     STDMETHOD(GetSimpleCounter)(ISimpleCounter **counter);
