@@ -517,7 +517,12 @@ PyObject *PyIDispatch::InvokeTypes(PyObject *self, PyObject *args)
 
 error:
     if (dispparams.rgvarg) {
-        for (i = dispparams.cArgs; i--;) VariantClear(&dispparams.rgvarg[i]);
+        for (i = dispparams.cArgs; i--;) {
+            if ((V_VT(&dispparams.rgvarg[i]) & ~VT_TYPEMASK) == (VT_BYREF | VT_ARRAY)) {
+                SafeArrayDestroy(*V_ARRAYREF(&dispparams.rgvarg[i]));
+            }
+            VariantClear(&dispparams.rgvarg[i]);
+        }
         delete[] dispparams.rgvarg;
     }
     delete[] ArgHelpers;
